--- a/weather/Dockerfile
+++ b/weather/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8u181-jdk-alpine
-
+RUN mvn -version
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" > /etc/timezone
 
